[tool.poetry]
name = "mongo-helper-kit"
version = "0.1.0"
description = "ction to perfrom CRUD operations"
authors = ["abhishekprakash256 <abhishekprakash47@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mongomock= "^4.2.0.post1"
pymongo= "^4.7.2"
pytest= "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
